[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olympus"
version = "0.1.0"
description = "A comprehensive AI system with intelligent data management, autonomous operations, monitoring, and user interaction"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.4.2",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.5",
    "numpy>=1.24.0",
    "pandas>=2.1.1",
    "torch>=2.0.0",
    "transformers>=4.34.0",
    "langchain>=0.0.300",
    "python-arango>=7.9.1",
    "redis>=5.0.1",
    "prometheus-client>=0.17.1",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-faker>=2.0.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=olympus --cov-report=html"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["olympus"]
